small changes. Removed the NBT_TAGS for now